--- a/social-links-profile-style.css
+++ b/social-links-profile-style.css
@@ -24,7 +24,7 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
-    
+
 }
 
 * {
@@ -98,10 +98,19 @@ ul li button {
     color: var(--White);
     background-color: var(--Grey-700);
 }
+
 ul li button:hover,
 ul li button:active {
     color: var(--Grey-700);
     background-color: var(--Green);
     cursor: pointer;
     transition: 0.3s ease-in;
+}
+
+@media (prefers-reduced-motion: reduce) {
+
+    ul li button:hover,
+    ul li button:active {
+        transition: none;
+    }
 }
